// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabButton renders a TabButton 1`] = `
<div>
  <button
    class="sc-AykKC bvMXXG 
    tab-button
    
  "
    name="test"
    type="button"
  >
    <p>
      Refine Results
    </p>
  </button>
</div>
`;

exports[`TabButton renders multuple TabButtons 1`] = `
<div>
  <button
    class="sc-AykKC bvMXXG 
    tab-button
    
  "
    name="test1"
    type="button"
  >
    <p>
      Refine Results1
    </p>
  </button>
  <button
    class="sc-AykKC bvMXXG 
    tab-button
    
  "
    name="test2"
    type="button"
  >
    <p>
      Refine Results2
    </p>
  </button>
</div>
`;

exports[`TabPanel renders a TabPanel 1`] = `
<div>
  <div
    class="sc-AykKF IRPIi 
    tab-panel
    
  "
    name="tab-panel-test"
  >
    <p>
      View Type
    </p>
  </div>
</div>
`;

exports[`TabPanel renders additional classNames 1`] = `
<div>
  <div
    class="sc-AykKF IRPIi 
    tab-panel
    test classes
  "
    name="tab-panel-test1"
  >
    <p>
      test1
    </p>
  </div>
  <div
    class="sc-AykKF IRPIi 
    tab-panel
    another-class
  "
    name="tab-panel-test2"
  >
    <p>
      test2
    </p>
  </div>
</div>
`;

exports[`TabPanel renders multiple TabPanels 1`] = `
<div>
  <div
    class="sc-AykKF IRPIi 
    tab-panel
    
  "
    name="tab-panel-test1"
  >
    <p>
      test1
    </p>
  </div>
  <div
    class="sc-AykKF IRPIi 
    tab-panel
    
  "
    name="tab-panel-test2"
  >
    <p>
      test2
    </p>
  </div>
  <div
    class="sc-AykKF IRPIi 
    tab-panel
    
  "
    name="tab-panel-test3"
  >
    <p>
      test3
    </p>
  </div>
  <div
    class="sc-AykKF IRPIi 
    tab-panel
    
  "
    name="tab-panel-test4"
  >
    <p>
      test4
    </p>
  </div>
</div>
`;

exports[`Tabs renders a border 1`] = `
<div>
  <div
    class="sc-AykKD kyNNoe 
    tabs-container
    
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AykKE eGDRcq tab-button-wrap"
    >
      <button
        class="sc-AykKC hZdcdX 
    tab-button
    active
  "
        name="refine-results-1"
        type="button"
      >
        <p>
          Refine Results
        </p>
      </button>
      <button
        class="sc-AykKC bvMXXG 
    tab-button
    
  "
        name="edit-details-1"
        type="button"
      >
        <p>
          Edit Details
        </p>
      </button>
    </div>
    <div
      class="sc-AykKF kMLBXn 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AykKF IRPIi 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;

exports[`Tabs renders additional classNames 1`] = `
<div>
  <div
    class="sc-AykKD cFBUNQ 
    tabs-container
    test classes
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AykKE eGDRcq tab-button-wrap"
    >
      <button
        class="sc-AykKC hZdcdX 
    tab-button
    active
  "
        name="refine-results-1"
        type="button"
      >
        <p>
          Refine Results
        </p>
      </button>
      <button
        class="sc-AykKC bvMXXG 
    tab-button
    
  "
        name="edit-details-1"
        type="button"
      >
        <p>
          Edit Details
        </p>
      </button>
    </div>
    <div
      class="sc-AykKF kMLBXn 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AykKF IRPIi 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;

exports[`Tabs renders correctly with minimal props 1`] = `
<div>
  <div
    class="sc-AykKD cFBUNQ 
    tabs-container
    
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AykKE eGDRcq tab-button-wrap"
    >
      <button
        class="sc-AykKC hZdcdX 
    tab-button
    active
  "
        name="refine-results-1"
        type="button"
      >
        <p>
          Refine Results
        </p>
      </button>
      <button
        class="sc-AykKC bvMXXG 
    tab-button
    
  "
        name="edit-details-1"
        type="button"
      >
        <p>
          Edit Details
        </p>
      </button>
    </div>
    <div
      class="sc-AykKF kMLBXn 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AykKF IRPIi 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;
